--- a/app/src/main/res/layout/activity_counter_up.xml
+++ b/app/src/main/res/layout/activity_counter_up.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.jommaa.counterwidget.CounterUpView
+        android:id="@+id/counterView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:digitBackgroundColor="@color/colorPrimary"
+        app:digitPadding="20dp"
+        app:digitTextColor="@color/colorAccent"
+        app:digitTextSize="60sp"
+        app:digitspringColor="#ffffff"
+        app:withtext="false" />
+
+
+</RelativeLayout>
