--- a/app/src/main/res/layout/activity_counter_down.xml
+++ b/app/src/main/res/layout/activity_counter_down.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".CounterDownActivity">
 
     <com.jommaa.counterwidget.CounterDownView
-        android:id="@+id/counterDown"
+        android:id="@+id/counterDownView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
