--- a/app/src/main/res/layout/activity_counter_down.xml
+++ b/app/src/main/res/layout/activity_counter_down.xml
@@ -8,13 +8,13 @@
 
     <com.jommaa.counterwidget.CounterDownView
         android:id="@+id/counterDownView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:background="@android:color/background_dark"
         app:digitBackgroundColor="@color/colorPrimary"
-        app:digitPadding="20dp"
         app:digitTextColor="@color/colorAccent"
-        app:digitTextSize="60sp"
+        app:digitTextSize="20sp"
         app:digitspringColor="#ffffff"
         app:withtext="false" />
 
